# obs-gstreamer

./: Dockerfile  meson.build
homebrew-libs/glib-2.80.4/: INSTALL_RECEIPT.json  sbom.spdx.json
homebrew-libs/glib-2.80.4/.brew/: glib.rb
homebrew-libs/glib-2.80.4/lib/: libgio-2.0.0.dylib  libgirepository-2.0.0.dylib  libglib-2.0.dylib  libgmodule-2.0.0.dylib  libgobject-2.0.dylib  libgthread-2.0.dylib
homebrew-libs/glib-2.80.4/lib/girepository-1.0/: GLib-2.0.typelib
homebrew-libs/glib-2.80.4/lib/pkgconfig/: gio-2.0.pc  gio-unix-2.0.pc  girepository-2.0.pc  glib-2.0.pc  gmodule-export-2.0.pc  gmodule-no-export-2.0.pc  gobject-2.0.pc  gthread-2.0.pc
homebrew-libs/glib-2.80.4/share/gir-1.0/: GLib-2.0.gir
homebrew-libs/gstreamer-1.24.7/: INSTALL_RECEIPT.json  sbom.spdx.json
homebrew-libs/gstreamer-1.24.7/.brew/: gstreamer.rb
homebrew-libs/gstreamer-1.24.7/lib/: libges-1.0.dylib  libgstadaptivedemux-1.0.0.dylib  libgstallocators-1.0.dylib  libgstanalytics-1.0.0.dylib  libgstapp-1.0.dylib  libgstaudio-1.0.0.dylib  libgstbadaudio-1.0.dylib  libgstbase-1.0.0.dylib  libgstbasecamerabinsrc-1.0.dylib  libgstcheck-1.0.dylib  libgstcodecparsers-1.0.dylib  libgstcodecs-1.0.0.dylib  libgstcontroller-1.0.dylib  libgstdxva-1.0.0.dylib  libgstfft-1.0.dylib  libgstgl-1.0.0.dylib  libgstinsertbin-1.0.0.dylib  libgstisoff-1.0.dylib  libgstmpegts-1.0.dylib  libgstmse-1.0.0.dylib  libgstnet-1.0.0.dylib  libgstpbutils-1.0.0.dylib  libgstphotography-1.0.dylib  libgstplay-1.0.0.dylib  libgstplayer-1.0.dylib  libgstreamer-1.0.0.dylib  libgstriff-1.0.dylib  libgstrtp-1.0.0.dylib  libgstrtsp-1.0.dylib  libgstrtspserver-1.0.0.dylib  libgstsctp-1.0.0.dylib  libgstsdp-1.0.dylib  libgsttag-1.0.0.dylib  libgsttranscoder-1.0.dylib  libgsturidownloader-1.0.0.dylib  libgstvalidate-1.0.dylib  libgstvalidate-default-overrides-1.0.0.dylib  libgstvideo-1.0.0.dylib  libgstwebrtc-1.0.0.dylib
homebrew-libs/gstreamer-1.24.7/lib/girepository-1.0/: GES-1.0.typelib  Gst-1.0.typelib  GstAllocators-1.0.typelib  GstAnalytics-1.0.typelib  GstApp-1.0.typelib  GstAudio-1.0.typelib  GstBase-1.0.typelib  GstCodecs-1.0.typelib  GstController-1.0.typelib  GstDxva-1.0.typelib  GstGL-1.0.typelib  GstGLX11-1.0.typelib  GstMpegts-1.0.typelib  GstNet-1.0.typelib  GstPbutils-1.0.typelib  GstPlay-1.0.typelib  (+9 more)
(+368 files in other folders)
